# graphics-experiments

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
common/cmake/: setup_cxx.cmake  setup_sources.cmake  setup_testplate.cmake
dx12_bare/: CMakeLists.txt
dx12_bare/modules/: dx_renderer.cpp  dx_renderer.cppm
dx12_bare/modules/core/: camera.cpp  camera.cppm
dx12_bare/modules/rendering/: dx_renderer.cpp  dx_renderer.cppm
dx12_bare/shaders/: main_pixel.hlsl  main_vertex.hlsl  shader_resources.hlsli
dx12_bare/source/: main.cpp
dx12_wrapper/: CMakeLists.txt
dx12_wrapper/include/: macros.hpp
dx12_wrapper/modules/: core.cppm  external.cppm  glm.cppm  gltf.cppm  log.cppm  rendering.cppm  resources.cppm
dx12_wrapper/modules/core/: dx_common.cppm  dx_device.cpp  dx_device.cppm  input.cpp  input.cppm  transform.cpp  transform.cppm
dx12_wrapper/modules/gltf/: material.cpp  material.cppm  mesh.cpp  mesh.cppm  model.cpp  model.cppm  primitive.cpp  primitive.cppm
dx12_wrapper/modules/helper/: device_resources.cpp  device_resources.cppm
dx12_wrapper/modules/helpers/: dx_buffer_helpers.cppm  dx_format_helpers.cppm  dx_resource_upload.cpp  dx_resource_upload.cppm
dx12_wrapper/modules/rendering/: dx_descriptor_heap.cpp  dx_descriptor_heap.cppm  dx_descriptor_pile.cpp  dx_descriptor_pile.cppm  dx_pipelinestate.cpp  dx_pipelinestate.cppm  dx_rootsignature.cpp  dx_rootsignature.cppm  dx_shader_utils.cpp  dx_shader_utils.cppm  gltf.cpp  gltf.cppm
dx12_wrapper/modules/resources/: dx_const_buffer.cppm  dx_depth_render_texture.cpp  dx_depth_render_texture.cppm  dx_depthrendertexture.cpp  dx_depthrendertexture.cppm  dx_render_texture.cpp  dx_render_texture.cppm  dx_rendertexture.cpp  dx_rendertexture.cppm  dx_resource.cpp  dx_resource.cppm  dx_structured_buffer.cppm  dx_texture.cpp  dx_texture.cppm  resource_bank.cppm
dx_bare/: CMakeLists.txt  README.md
dx_bare/modules/core/: camera.cpp
dx_bare/modules/rendering/: dx_renderer.cpp  dx_renderer.cppm
dx_bare/shaders/: main_pixel.hlsl  main_vertex.hlsl
dx_bare/source/: main.cpp
dx_hardware_raytracing/: CMakeLists.txt
dx_hardware_raytracing/modules/gltf/: raytraced_model.cpp  raytraced_model.cppm  raytraced_primitive.cpp  raytraced_primitive.cppm  scene_geometry_buffer.cpp  scene_geometry_buffer.cppm
dx_hardware_raytracing/modules/helpers/: blas.cpp  blas.cppm  tlas.cpp  tlas.cppm
dx_hardware_raytracing/modules/rendering/: dx_imgui_renderer.cpp  dx_imgui_renderer.cppm  dx_ray_pipeline.cpp  dx_ray_pipeline.cppm  dx_renderer.cpp  dx_renderer.cppm  scene_lighting.cpp  scene_lighting.cppm
dx_hardware_raytracing/shaders/: common.hlsli  hit.hlsl  lighting.hlsli  materials.hlsli  miss.hlsl  pbr.hlsli  ray_bounce.hlsli  ray_gen.hlsl  rt_blit_compute.hlsl  tonemap.hlsli
dx_hardware_raytracing/source/: main.cpp
dx_imgui/: .gitignore  CMakeLists.txt
dx_imgui/modules/: imgui_renderer.cpp  imgui_renderer.cppm
dx_imgui/source/: main.cpp
dx_meshlets/: CMakeLists.txt  README.md
dx_meshlets/modules/: gltf.cppm
dx_meshlets/modules/core/: camera.cpp  camera.cppm
dx_meshlets/modules/gltf/: mesh.cpp  mesh.cppm  model.cpp  model.cppm  node.cppm  primitive.cpp  primitive.cppm
dx_meshlets/modules/rendering/: dx_renderer.cpp  dx_renderer.cppm
dx_meshlets/shaders/: meshlet_amplification.hlsl  meshlet_mesh.hlsl  meshlet_pixel.hlsl  meshlets.hlsli  pbr.hlsli  shader_resources.hlsli
dx_meshlets/source/: main.cpp
dx_wrapper/: CMakeLists.txt  README.md
dx_wrapper/modules/: core.cppm  external.cppm  helpers.cppm  rendering.cppm
dx_wrapper/modules/core/: camera.cpp  camera.cppm  common.cppm  dx_common.cppm  dx_device.cpp  dx_device.cppm  input.cpp  input.cppm  input_enums.cppm  log.cppm  transform.cpp  transform.cppm
dx_wrapper/modules/gltf/: common.cppm  material.cpp  material.cppm  mesh.cppm  model.cpp  model.cppm  node.cppm  primitive.cpp  primitive.cppm
dx_wrapper/modules/helpers/: dx_buffer_helpers.cppm  dx_format_helpers.cppm  dx_resource_upload.cpp  dx_resource_upload.cppm
dx_wrapper/modules/rendering/: dx_descriptor_heap.cpp  dx_descriptor_heap.cppm  dx_descriptor_pile.cpp  dx_descriptor_pile.cppm  dx_pipelinestate.cpp  dx_pipelinestate.cppm  dx_rootsignature.cpp  dx_rootsignature.cppm  dx_shader_utils.cpp  dx_shader_utils.cppm
dx_wrapper/modules/resources/: dx_const_buffer.cppm  dx_depth_render_texture.cpp  dx_depth_render_texture.cppm  dx_render_texture.cpp  dx_render_texture.cppm  dx_resource.cpp  dx_resource.cppm  dx_structured_buffer.cppm  dx_texture.cpp  dx_texture.cppm  resource_bank.cppm
std_module/: CMakeLists.txt  std.cppm
template/: CMakeLists.txt
