cmake_minimum_required(VERSION 3.28)

set(CMAKE_C_STANDARD 23)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_SCAN_FOR_MODULES ON)

if (CMAKE_VERSION VERSION_GREATER_EQUAL "4.3.1")
	set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD "451f2fe2-a8a2-47c3-bc32-94786d8fc91b")
elseif (CMAKE_VERSION VERSION_GREATER_EQUAL "4.0.3")
	set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD "d0edc3af-4c50-42ea-a356-e2862fe7a444")
elseif (CMAKE_VERSION VERSION_GREATER_EQUAL "4.0.1")
	set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD "a9e1cf81-9932-4810-974b-6eccaf14e457")
else()
	set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD "0e5b6991-d74f-4b3d-a41c-cf096e0b2508")
endif()

project(graphics_experiments)

set(TESTPLATES_DIR ${CMAKE_CURRENT_SOURCE_DIR})

set(USE_IMPORT_STD FALSE CACHE INTERNAL "")
if (CMAKE_VERSION VERSION_GREATER_EQUAL "3.30"
		AND CMAKE_GENERATOR MATCHES "Ninja"
		AND ((CMAKE_CXX_COMPILER_ID STREQUAL "MSVC" AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL "19.36")
		OR (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL "17.0")))
	set(USE_IMPORT_STD TRUE)
endif ()

include(common/cmake/setup_cxx.cmake)

if (NOT USE_IMPORT_STD)
	add_subdirectory(std_module)
endif ()

add_subdirectory(dx_wrapper)
add_subdirectory(dx_bare)
add_subdirectory(dx_imgui)
add_subdirectory(dx_meshlets)
add_subdirectory(dx_hardware_raytracing)